crates/nyx-lexer/tests/snapshots/integration_tests__namespaces__declaration_only.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Namespace
- Core
- Newline
- Namespace
- Std
- Newline
- Namespace
- Ident: math
- Newline
