crates/nyx-lexer/tests/snapshots/integration_tests__namespaces__empty_pass.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Namespace
- Ident: App
- Newline
- Indent
- Pass
- Newline
- Dedent
