crates/nyx-lexer/tests/snapshots/integration_tests__namespaces__nested.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Namespace
- Std
- Newline
- Indent
- Namespace
- Ident: io
- Newline
- Indent
- Func
- Bang
- Ident: read
- LParen
- Ident: fd
- Colon
- I32
- Comma
- Ident: buf
- Colon
- Star
- Mut
- U8
- Comma
- Ident: len
- Colon
- USize
- RParen
- Arrow
- USize
- Newline
- Func
- Bang
- Ident: write
- LParen
- Ident: fd
- Colon
- I32
- Comma
- Ident: buf
- Colon
- Star
- U8
- Comma
- Ident: len
- Colon
- USize
- RParen
- Arrow
- USize
- Newline
- Dedent
- Dedent
