crates/nyx-lexer/tests/snapshots/integration_tests__namespaces__with_functions.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Namespace
- Ident: math
- Newline
- Indent
- Export
- Func
- Ident: add
- LParen
- Ident: a
- Colon
- I32
- Comma
- Ident: b
- Colon
- I32
- RParen
- Arrow
- I32
- Newline
- Export
- Func
- Ident: sub
- LParen
- Ident: a
- Colon
- I32
- Comma
- Ident: b
- Colon
- I32
- RParen
- Arrow
- I32
- Newline
- Export
- Func
- Ident: mul
- LParen
- Ident: a
- Colon
- I32
- Comma
- Ident: b
- Colon
- I32
- RParen
- Arrow
- I32
- Newline
- Export
- Func
- Ident: div
- LParen
- Ident: a
- Colon
- I32
- Comma
- Ident: b
- Colon
- I32
- RParen
- Arrow
- I32
- Newline
- Dedent
