crates/nyx-lexer/tests/snapshots/integration_tests__namespaces__with_types.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Namespace
- Ident: shapes
- Newline
- Indent
- Public
- Struct
- Ident: Circle
- Newline
- Indent
- Ident: cx
- Colon
- F64
- Newline
- Ident: cy
- Colon
- F64
- Newline
- Ident: radius
- Colon
- F64
- Newline
- Dedent
- Public
- Struct
- Ident: Rect
- Newline
- Indent
- Ident: x
- Colon
- F64
- Newline
- Ident: y
- Colon
- F64
- Newline
- Ident: w
- Colon
- F64
- Newline
- Ident: h
- Colon
- F64
- Newline
- Dedent
- Public
- Enum
- Ident: ShapeKind
- Newline
- Indent
- Ident: CIRCLE
- Newline
- Ident: RECT
- Newline
- Ident: TRIANGLE
- Newline
- Dedent
- Dedent
